--- a/aireviewer-frontend/index.html
+++ b/aireviewer-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aireviewer-frontend</title>
+    <title>AI Reviewer</title>
     <script>
       (function(){
         try{
